Made cards wrap, bit buggy but fixes issues on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,7 +47,7 @@ nav {
 
   #cards {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
   }
 }
 
